real time live leilao

--- a/src/LeilaoBundle/Resources/views/leilao/index.html.twig
+++ b/src/LeilaoBundle/Resources/views/leilao/index.html.twig
@@ -102,6 +102,8 @@
                                                 {% endif %}">
                                                 {% if passagem.leilao.leilaoEstaAberto == false %}
                                                     Aproveite!
+                                                {% else %}
+                                                    00:00:00
                                                 {% endif %}
                                             </p>
                                         </div>
