--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -98,6 +98,8 @@
                                                     {{ passagem.leilao.tempoleilao }}
                                                 {% endif %}">{% if passagem.leilao.leilaoEstaAberto == false %}
                                         Aproveite!
+                                        {% else %}
+                                        00:00:00
                                     {% endif %}</p>
                                 <p class="leilao-home-txt-2">Início :{{ passagem.leilao.datainicio|date("d/m/Y h:m:s") }}</p>
                             </div>
