--- a/src/LeilaoBundle/Resources/views/leilao/index.html.twig
+++ b/src/LeilaoBundle/Resources/views/leilao/index.html.twig
@@ -103,7 +103,7 @@
                                                 {% if passagem.leilao.leilaoEstaAberto == false %}
                                                     Aproveite!
                                                 {% else %}
-                                                    00:00:00
+                                                    {{ passagem.leilao.tempoleilao }}
                                                 {% endif %}
                                             </p>
                                         </div>
