--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -74,7 +74,7 @@
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
-            li><a href="{{ url('AppBundleHome') }}">Home</a></li>
+            <li><a href="{{ url('AppBundleHome') }}">Home</a></li>
             <li><a href="{{ url('AppBundleComoFunciona') }}">Como funciona</a></li>
             <li><a href="{{ url('LeilaoBundle') }}">Leilão</a></li>
             <li><a href="{{ url('AppBundleCupons') }}">Cupons</a></li>
