--- a/app/Resources/views/base_admin.html.twig
+++ b/app/Resources/views/base_admin.html.twig
@@ -19,6 +19,7 @@
     <body>
         <ul>
             <li><a href="{{ url('admin_passagem_index') }}">Passagem</a></li>
+            <li><a href="{{ url('admin_leilao_index') }}">Leilões</a></li>
             <li><a href="{{ url('admin_cidade_index') }}">Cidade</a></li>
             <li><a href="{{ url('admin_estado_index') }}">Estado</a></li>
             <li><a href="{{ url('admin_agencia_index') }}">Agencia</a></li>
