--- a/app/Resources/views/imagem/new.html.twig
+++ b/app/Resources/views/imagem/new.html.twig
@@ -1,8 +1,7 @@
 {% extends 'base_admin.html.twig' %}
 
-
 {% block body %}
-    <h1>Leilao creation</h1>
+    <h1>Imagem creation</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
@@ -11,7 +10,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('admin_leilao_index') }}">Back to the list</a>
+            <a href="{{ path('admin_imagem_index') }}">Back to the list</a>
         </li>
     </ul>
 {% endblock %}
