--- a/src/LeilaoBundle/Resources/views/leilao/index.html.twig
+++ b/src/LeilaoBundle/Resources/views/leilao/index.html.twig
@@ -54,7 +54,7 @@
                         <div class="card small">
                             <div class="card-image waves-effect waves-block waves-light">
                                 <div class="materialboxed">
-                                    <img width="250" src="http://198.199.81.70/img/rio.jpg">
+                                    <img width="250" src="{{ asset('uploads/imagens/' ~ passagem.imagem) }}">
                                     <figcaption>{{ passagem.titulo }}</figcaption>
                                 </div>
                             </div>
