--- a/app/Resources/views/imagem/edit.html.twig
+++ b/app/Resources/views/imagem/edit.html.twig
@@ -1,8 +1,7 @@
 {% extends 'base_admin.html.twig' %}
 
-
 {% block body %}
-    <h1>Passagem edit</h1>
+    <h1>Imagem edit</h1>
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
@@ -11,7 +10,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('admin_passagem_index') }}">Back to the list</a>
+            <a href="{{ path('admin_imagem_index') }}">Back to the list</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
